frontservice.yml
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-webapp-service
  labels:
    app: usermgmt-webapp
spec:
  type: NodePort #LoadBalancer #ClusterIP
  selector:
    app: usermgmt-webapp
  ports:
  - port: 8080
