mysqlcluster.yml
apiVersion: v1
kind: Service 
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None #this means we are going to use the Pod Ip
