ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx1-ingress-service
  spec:
    rules:
    - http:
      paths:
        - path: /app1
          backend:
            serviceName: app1-cluster-ip
            servicePort: 80
        - path: /app2
          backend:
            serviceName: app2-cluster-ip
            servicePort: 80
